# soc-toolkit

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  sample_iocs.txt  soc_toolkit.py  test_soc.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
k8s/: deployment.yaml
samples/: iocs.txt
soc_toolkit/: __init__.py  active_defense.py  ai_analyst.py  api_server.py  asm.py  batch.py  beaconing.py  c2_extractor.py  cache.py  cli.py  cluster.py  compliance.py  config.py  converter.py  core.py  dashboard.py  decoder.py  detectors.py  edr_collector.py  enrichment.py  enterprise_auth.py  enums.py  extractor.py  formatter.py  graph_visualizer.py  i18n.py  logger.py  mem_forensics.py  mitre.py  mitre_matrix.py  mitre_navigator.py  osint.py  pcap_analyzer.py  pe_analyzer.py  playbook.py  providers.py  ransomware_checker.py  report_gen.py  rules.py  sanitizer.py  (+15 more)
tests/: run_tests.py  test_all_functions.py  test_decoder.py  test_enterprise.py  test_global.py  test_keyfree_providers.py  test_playbook.py  test_precision.py  test_sdk.py  test_v4.py  test_v5.py  test_v6.py  test_v7.py  test_v7_suite.py  test_whitelist.py
