[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-toolkit"
version = "7.0.0"
description = "🛡️ SOC Toolkit v7.0 Global Enterprise Security Suite - Zero-Key VirusTotal/Shodan/AbuseIPDB Engine | EDR Telemetry | Syslog Stream"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "Furkan Dinçer", email = "frkndncr@github.com"}
]
maintainers = [
    {name = "Furkan Dinçer", email = "frkndncr@github.com"}
]
keywords = [
    "security",
    "soc",
    "threat-intelligence", 
    "ioc",
    "cybersecurity",
    "malware",
    "virustotal",
    "abuseipdb",
    "shodan",
    "cli"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities"
]
dependencies = [
    "requests>=2.28.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0"
]

[project.urls]
Homepage = "https://github.com/frkndncr/soc-toolkit"
Documentation = "https://github.com/frkndncr/soc-toolkit#readme"
Repository = "https://github.com/frkndncr/soc-toolkit.git"
Issues = "https://github.com/frkndncr/soc-toolkit/issues"

[project.scripts]
soc = "soc_toolkit.cli:main"
soc-toolkit = "soc_toolkit.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
